# cpp-inference-engine

./: CMakeLists.txt  README.md
proto/: minisgl_inference.proto
src/: main.cc  server.cc  server.h
src/engine/: dummy_engine.cc  dummy_engine.h  engine.h  llama_cpp_engine.cc  llama_cpp_engine.h
